# gphoto2-server

./: .gitignore  README.md  README_FLEXIBLE_API.md  README_LIVE_SETTINGS.md  README_SERVER.md  pyproject.toml  requirements.txt
app/: __init__.py  camera_manager.py  camera_server.py
